                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Kamil Dudka (26 Sep 2009)
- Implemented a protocol independent way to specify blocking direction, used by
  transfer.c for blocking. It is currently used only by SCP and SFTP protocols.
  This enhancement resolves an issue with 100% CPU usage during SFTP upload,
  reported by Vourhey.

Daniel Stenberg (25 Sep 2009)
- Chris Mumford filed bug report #2861587
  (http://curl.haxx.se/bug/view.cgi?id=2861587) identifying that libcurl used
  the OpenSSL function X509_load_crl_file() wrongly and failed if it would
  load a CRL file with more than one certificate within. This is now fixed.
  
Daniel Stenberg (16 Sep 2009)
- Sven Anders reported that we introduced a cert verfication flaw for OpenSSL-
  powered libcurl in 7.19.6. If there was a X509v3 Subject Alternative Name
  field in the certficate it had to match and so even if non-DNS and non-IP
  entry was present it caused the verification to fail.

Daniel Fandrich (15 Sep 2009)
- Moved the libssh2 checks after the SSL library checks. This helps when
  statically linking since libssh2 needs the SSL library link flags to be
  set up already to satisfy its dependencies. This wouldn't be necessary if
  the libssh2 configure check was changed to use pkg-config since the
  --static flag would add the dependencies automatically.

Yang Tse (14 Sep 2009)
- Revert Joshua Kwan's patch committed 11 Sep 2009.

  Some systems poll function sets POLLHUP in revents without setting
  POLLIN, and sets POLLERR without setting POLLIN and POLLOUT. In some
  libcurl code execution paths this could trigger busy wait loops with
  high CPU usage until a timeout condition aborted the loop.
